# geoshp

./: .travis.yml  LICENSE  README.md  setup.cfg
src/geoshp/core/types/: __init__.py
src/geoshp/shp/: factory.py  shapefile.py
src/geoshp/shp/reader/: __init__.py  base.py  null.py  point.py
