[metadata]
name = geoshp
version = 1.0.0
author = Paul Statham
author_email = pstatix.github@gmail.com
description = Python Esri Shapefile Interface Library
long_description = file: README.md
long_description_content_type = text/markdown
keywords = shp, shapefile, shx, dbf, dbase, esri, gis, geospatial, geographic, coordinates
license = MIT
license_file = LICENSE
platforms = Windows
url = https://github.com/pstatix/geoshp
project_urls =
    issues = https://github.com/pstatix/geoshp/issues
    wiki = https://github.com/pstatix/geoshp/wiki
classifiers =
    Development Status :: 4 :: Beta
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10
    Topic :: Scientific/Engineering :: GIS
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=2.7, >=3.6
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
exclude =
    test*